--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="aaa">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details&quest;
+    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
     </a>
   </div>
   <div class="centered-main-page-element">
@@ -55,6 +55,6 @@
       </li>
     </ul>
   </div>
-  <script type="text/javascript" src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
