--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="aaa">
+  <header class="header">
     <img src="./eisenhower-matrix.jpg">
     <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
     </a>
-  </div>
-  <div class="centered-main-page-element">
+  </header>
+  <main class="centered-main-page-element">
     <p id="topSectionForAddingElementToList">
       <label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
@@ -54,7 +54,7 @@
         </button>
       </li>
     </ul>
-  </div>
+  </main>
   <script src="app.js"></script>
 </body>
 </html>
