--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
 <body>
   <header class="header">
     <img src="./eisenhower-matrix.jpg">
-    <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
+    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
     </a>
   </header>
-  <main class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList">
-      <label for="new-task">Add Item</label>
+  <main class="main">
+    <section id="topSectionForAddingElementToList">
+      <h3 class="subtitle new-task">Add Item</h3>
       <div class="task-row-wrapper">
         <input id="new-task" class="task" type="text">
-        <button>Add</button>
+        <button class="button">Add</button>
       </div>
-    </p>
-    <h3>Todo</h3>
+    </section>
+    <h3 class="subtitle">Todo</h3>
     <ul id="incompleteTasks">
       <li>
         <input type="checkbox">
         <label class="task">Pay Bills</label>
         <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
           <img src="./remove.svg">
         </button>
       </li>
@@ -36,20 +36,20 @@
         <input type="checkbox">
         <label class="task">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task">
-        <button class="edit">Save</button>
-        <button class="delete">
+        <button class="button edit">Save</button>
+        <button class="button delete">
           <img src="./remove.svg">
         </button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="subtitle">Completed</h3>
     <ul id="completed-tasks">
       <li>
         <input type="checkbox" checked>
         <label class="task">See the Doctor</label>
         <input type="text" class="task">
-        <button class="edit">Edit</button>
-        <button class="delete">
+        <button class="button edit">Edit</button>
+        <button class="button delete">
           <img src="./remove.svg">
         </button>
       </li>
