--- a/index.html
+++ b/index.html
@@ -9,36 +9,36 @@
 </head>
 <body>
   <header class="header">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
     <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
     </a>
   </header>
   <main class="main">
-    <section id="topSectionForAddingElementToList">
-      <h3 class="subtitle new-task">Add Item</h3>
+    <section>
+      <h3 class="subtitle subtitle__new-task">Add Item</h3>
       <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
+        <input id="new-task" class="common" type="text">
         <button class="button">Add</button>
       </div>
     </section>
     <h3 class="subtitle">Todo</h3>
-    <ul id="incompleteTasks">
+    <ul id="tasks-todo">
       <li>
         <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
+        <label class="common">Pay Bills</label>
+        <input type="text" class="common">
         <button class="button edit">Edit</button>
         <button class="button delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="Remove task">
         </button>
       </li>
-      <li class="editMode">
+      <li class="edit-mode">
         <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
+        <label class="common">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="common">
         <button class="button edit">Save</button>
         <button class="button delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="Remove task">
         </button>
       </li>
     </ul>
@@ -46,11 +46,11 @@
     <ul id="completed-tasks">
       <li>
         <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
+        <label class="common">See the Doctor</label>
+        <input type="text" class="common">
         <button class="button edit">Edit</button>
         <button class="button delete">
-          <img src="./remove.svg">
+          <img src="./remove.svg" alt="Remove task">
         </button>
       </li>
     </ul>
