--- a/index.html
+++ b/index.html
@@ -4,52 +4,53 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Todo App</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700" >
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato:300,400,700">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header class="header">
     <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-    <a class="header__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?
+    <a class="header-link" href="https://goal-life.com/page/method/matrix-eisenhower">
+      Want more details?
     </a>
   </header>
   <main class="main">
     <section>
-      <h3 class="subtitle subtitle__new-task">Add Item</h3>
-      <div class="task-row-wrapper">
-        <input id="new-task" class="common" type="text">
-        <button class="button">Add</button>
+      <h3 class="subtitle subtitle-new-task">Add Item</h3>
+      <div class="wrapper">
+        <input id="new-task" class="input-task common" type="text">
+        <button class="button button-add">Add</button>
       </div>
     </section>
     <h3 class="subtitle">Todo</h3>
-    <ul id="tasks-todo">
-      <li>
-        <input type="checkbox">
-        <label class="common">Pay Bills</label>
-        <input type="text" class="common">
-        <button class="button edit">Edit</button>
-        <button class="button delete">
+    <ul id="tasks-todo" class="tasks-list">
+      <li class="task-item">
+        <input type="checkbox" class="task-checkbox">
+        <label class="task-label common">Pay Bills</label>
+        <input type="text" class="task-edit-input common">
+        <button class="button button-edit">Edit</button>
+        <button class="button button-delete">
           <img src="./remove.svg" alt="Remove task">
         </button>
       </li>
-      <li class="edit-mode">
-        <input type="checkbox">
-        <label class="common">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="common">
-        <button class="button edit">Save</button>
-        <button class="button delete">
+      <li class="task-item edit-mode">
+        <input type="checkbox" class="task-checkbox">
+        <label class="task-label common">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task-edit-input common">
+        <button class="button button-edit">Save</button>
+        <button class="button button-delete">
           <img src="./remove.svg" alt="Remove task">
         </button>
       </li>
     </ul>
     <h3 class="subtitle">Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked>
-        <label class="common">See the Doctor</label>
-        <input type="text" class="common">
-        <button class="button edit">Edit</button>
-        <button class="button delete">
+    <ul id="completed-tasks" class="tasks-list-completed">
+      <li class="task-item">
+        <input type="checkbox" class="task-checkbox" checked>
+        <label class="task-label common">See the Doctor</label>
+        <input type="text" class="task-edit-input common">
+        <button class="button button-edit">Edit</button>
+        <button class="button button-delete">
           <img src="./remove.svg" alt="Remove task">
         </button>
       </li>
